2008-06-27  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimpfilteredcontainer.[ch]: added GimpFilteredContainer
	which can be used to filter containers based on object tags.

	* app/widgets/gimpbrushfactoryview.c
	* app/widgets/gimpdatafactoryview.[ch]: simple tag query from GUI.

2008-06-22  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimp.c: save and uninitialize tag cache properly.

2008-06-22  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimptagcache.c: added tag cache loading from file
	functionality. Improved tag assignment to objects.

2008-06-21  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimptagcache.[ch]: extended cache system
	functionality and added tag cache saving to file.

	* app/core/gimp.c: further integration of
	gimp tag cache.

	* app/core/gimptagged.[ch]: fixed repeated get
	in function name.

2008-06-20  Aurimas Juška   <aurisj@svn.gnome.org>

	* app/core/gimpdata.[ch]
	* app/core/gimptagcache.c (gimp_tag_cache_update)
	* app/core/gimptagged.[ch]: extended object identification
	  capabilities. Each tagged object now provides unique
	  identification string. In case it can change between sessions,
	  objects can provide digest calculation which would help to remap
	  to new identification string.

	* app/core/gimp-gradients.c
	* app/core/gimp.c
	* app/core/gimpbrush.c
	* app/core/gimpcurve.c
	* app/core/gimpgradient.c (gimp_gradient_get_standard)
	* app/core/gimppalette.c (gimp_palette_get_standard)
	* app/core/gimppattern.c (gimp_pattern_get_standard): provide
	  unique name for internal objects.


2008-06-20  Martin Nordholts  <martinn@svn.gnome.org>

	Make angle constraints with the Free Select Tool by using Ctrl
	work also when moving vertices, not only when creating new ones.

	* app/tools/gimpfreeselecttool.c
	(gimp_free_select_tool_active_modifier_key): Implement.

	(gimp_free_select_tool_update_motion): Put motion logic here so we