@@ -1,3 +1,7 @@
+2008-06-28  Aurimas Juška  <aurisj@svn.gnome.org>
+
+	* app/core/gimpfilteredcontainer.c: detect source container changes.
+
 2008-06-27  Aurimas Juška  <aurisj@svn.gnome.org>
 
 	* app/core/Makefile.am
